<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Checkboxes_operaciones">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:background="@drawable/dicenocolor"
                android:orientation="vertical"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_numero1_"
                        android:layout_width="match_parent"
                        android:layout_height="63dp"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/color"
                        android:ems="10"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:hint="@string/numero1"
                        android:phoneNumber="true"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/et_numero2_"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/color"
                        android:ems="10"
                        android:gravity="center|center_vertical"
                        android:hint="@string/numero2"
                        android:phoneNumber="true"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <CheckBox
                        android:id="@+id/ckb_suma"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="#48C5E4"
                        android:text="@string/sumar"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/ckb_resta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="#48C5E4"
                        android:text="@string/restar"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <CheckBox
                        android:id="@+id/ckb_mult"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="#48C5E4"
                        android:text="@string/mult"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/ckb_divi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="#48C5E4"
                        android:text="@string/dividir"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_resul_"
                        android:layout_width="match_parent"
                        android:layout_height="85dp"
                        android:layout_marginVertical="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/color"
                        android:drawablePadding="15dp"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:text="Resultado"
                        android:textSize="12dp" />

                    <Button
                        android:id="@+id/btn_calcular_"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:backgroundTint="#64DD17"
                        android:text="@string/calcular"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:iconPadding="-20dp" />

                    <Button
                        android:id="@+id/btn_productos"
                        android:layout_width="316dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:backgroundTint="#131212"
                        android:text="ir a productos" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>