<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B5D3D8"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="167dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:backgroundTint="#AA00FF"
                android:text="Elige opcion"
                android:textColor="#020202"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/design_default_color_primary_variant"
                android:dropDownSelector="@color/design_default_color_error"
                android:scrollbarSize="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_num1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/color"
                android:drawableLeft="@android:drawable/ic_menu_edit"
                android:ems="10"
                android:hint="@string/numero1"
                android:phoneNumber="true"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_num2"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/color"
                android:drawableLeft="@android:drawable/ic_menu_edit"
                android:ems="10"
                android:hint="@string/numero2"
                android:phoneNumber="true"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_calcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/dicenocolor"
                android:drawableTint="#F44336"
                android:text="@string/calcular"
                android:textSize="24sp"
                android:textStyle="bold"
                app:iconPadding="-30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_resul"
                android:layout_width="60dp"
                android:layout_height="58dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:paddingLeft="15dp"
                android:text="Resultado"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_enviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:backgroundTint="#D62C2C"
                android:text="@string/enviar"
                android:textStyle="bold" />



        </LinearLayout>

        <Button
            android:id="@+id/checkbox1"
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:backgroundTint="#E46767"
            android:text="checkbox" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>